--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.10.0",
+    "compromise": "^14.14.4",
     "docx": "^8.5.0",
     "file-saver": "^2.0.5",
     "firebase": "^11.8.1",
